--- a/kickstart/hypervisor.mustache
+++ b/kickstart/hypervisor.mustache
@@ -29,15 +29,102 @@ services --enabled=dnf-automatic.timer
 @virtualization
 
 ansible
+cockpit-machines
+cockpit-podman
+cockpit-storaged
+cockpit-system
 dnf-automatic
+git
 %end
 
 # Post-installation Script
 %post
 install \
-    -o root -g root -m400 \
+    -o root -g root -m440 \
     <(echo -e '%wheel\tALL=(ALL)\tNOPASSWD: ALL') \
     /etc/sudoers.d/01_wheel
+
+install \
+    -o root -g root -m644 \
+    <(cat << EOF
+    [commands]
+    upgrade_type = default
+    random_sleep = 0
+
+    network_online_timeout = 60
+
+    download_updates = yes
+    apply_updates = yes
+
+    reboot = when-needed
+    reboot_command = "shutdown -r +5 'Rebooting after applying package updates'"
+
+    [emitters]
+    emit_via = stdio
+
+    [email]
+    email_from = root@example.com
+    email_to = root
+    email_host = localhost
+    email_port = 25
+    email_tls = no
+
+    [command_email]
+    email_from = root@example.com
+    email_to = root
+
+    [base]
+    debuglevel = 1
+EOF
+    ) /etc/dnf/automatic.conf
+
+install \
+    -o root -g root -m644 \
+    <(cat << EOF
+    [hypervisor]
+    localhost
+EOF
+    ) /etc/ansible/hosts
+
+install \
+    -o root -g root -m644 \
+    <(cat << EOF
+    [Unit]
+    Description=Runs Ansible Pull
+    Wants=ansible-pull.timer
+    ConditionFileIsExecutable=/usr/bin/ansible-pull
+
+    [Service]
+    Type=oneshot
+    ExecStart=/usr/bin/ansible-pull -U https://github.com/ajpantuso/homelab ansible/main.yaml
+
+    [Install]
+    WantedBy=multi-user.target
+EOF
+    ) /etc/systemd/system/ansible-pull.service
+
+systemctl daemon-reload
+systemctl enable --now ansible-pull.service
+
+install \
+    -o root -g root -m644 \
+    <(cat << EOF
+    [Unit]
+    Description=Ansible Pull Timer
+    Requires=ansible-pull.service network.target network-online.target nss-lookup.target
+    After=network.target network-online.target nss-lookup.target
+
+    [Timer]
+    Unit=ansible-pull.service
+    OnCalendar=00/2:01:00
+
+    [Install]
+    WantedBy=timers.target
+EOF
+    ) /etc/systemd/system/ansible-pull.timer
+
+systemctl daemon-reload
+systemctl enable --now ansible-pull.timer
 %end
 
 # Reboot After Installation
